use the correct syntax for multiple artifact paths

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,6 @@ after_success:
 
 addons:
   artifacts:
-    paths: $(ls *.apk *.zip *.ipa)
+    paths: $(ls *.apk *.zip *.ipa | tr "\n" ":")
     target_paths: mobile-app/unstable/
     permissions: public-read
