Add in ability for stage to set the api url

--- a/www/package.json
+++ b/www/package.json
@@ -56,6 +56,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.0.0",
     "gulp-sourcemaps": "^2.0.0-alpha",
+    "gulp-replace": "^1.0.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-babel-preprocessor": "^6.0.1",
