Add env parser and env example file.

--- a/www/package.json
+++ b/www/package.json
@@ -50,13 +50,14 @@
     "gulp": "^4.0.0",
     "gulp-babel": "^6.1.2",
     "gulp-changed-in-place": "^2.0.3",
+    "gulp-env": "^0.4.0",
     "gulp-eslint": "^2.0.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^3.0.0",
     "gulp-sourcemaps": "^2.0.0-alpha",
-    "gulp-replace": "^1.0.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-babel-preprocessor": "^6.0.1",
